- **bug-fixed**: change the position value in localstorage when saving the zoom - **bug-fixed**: close the color panel when I select a different intent or click a button in the options panel - **bug-fixed**: connector alpha equal to generic connector alpha when create a new connector - **bug-fixed**: show man icon in cds-panel-intent-list for "start" and "defaultfallback" - **bug-fixed**: set connector alpha to 1 when mouse hover connector-out - **bug-fixed**: Do not save or change the intent name when the name is "start" or "defaultfallback" - **bug-fixed**: change z-index on the color panel by moving it below

--- a/src/app/chatbot-design-studio/cds-dashboard/cds-canvas/base-elements/cds-color-menu/cds-color-menu.component.scss
+++ b/src/app/chatbot-design-studio/cds-dashboard/cds-canvas/base-elements/cds-color-menu/cds-color-menu.component.scss
@@ -10,7 +10,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1;
     color: var(--blu);
     font-size: 15px;
     line-height: 18px;
