--- a/src/assets/sass/cds/tooltip-styles.scss
+++ b/src/assets/sass/cds/tooltip-styles.scss
@@ -40,6 +40,7 @@
 
 // ::ng-deep
 ::ng-deep .cds-mat-tooltip {
+    margin-bottom:6px!important;
     background-color: var(--gray-light-01) !important;
     color: var(--gray) !important;
     font-size: 12px !important;
